@@ -2,8 +2,6 @@
 
 package edu.colorado.phet.acidbasesolutions.module;
 
-import java.awt.geom.Dimension2D;
-
 import edu.colorado.phet.acidbasesolutions.constants.ABSColors;
 import edu.colorado.phet.acidbasesolutions.constants.ABSConstants;
 import edu.colorado.phet.acidbasesolutions.model.ABSModel;
@@ -11,7 +9,6 @@ import edu.colorado.phet.acidbasesolutions.view.*;
 import edu.colorado.phet.acidbasesolutions.view.graph.ConcentrationGraphNode;
 import edu.colorado.phet.common.piccolophet.PhetPCanvas;
 import edu.umd.cs.piccolo.PNode;
-import edu.umd.cs.piccolo.util.PBounds;
 
 /**
  * Base class for all canvases.
@@ -20,8 +17,6 @@ import edu.umd.cs.piccolo.util.PBounds;
  */
 public abstract class ABSCanvas extends PhetPCanvas {
     
-    private static final double MIN_MARGIN = 10;
-
     private final PNode rootNode;
     private final BeakerNode beakerNode;
     private final PHMeterNode pHMeterNode;
@@ -62,19 +57,9 @@ public abstract class ABSCanvas extends PhetPCanvas {
         
         pHColorKeyNode.setOffset( ABSConstants.PH_COLOR_KEY_LOCATION );
         // NOTE: all layout is handled via locations of model elements.
-        
-        centerRootNode();
     }    
     
     protected void addNode( PNode node ) {
         rootNode.addChild( node );
-    }
-    
-    protected void centerRootNode() {
-        Dimension2D worldSize = getWorldSize();
-        PBounds b = rootNode.getFullBoundsReference();
-        double xOffset = Math.max( MIN_MARGIN, ( worldSize.getWidth() - b.getWidth() ) / 2 );
-        double yOffset = Math.max( MIN_MARGIN, ( worldSize.getHeight() - b.getHeight() ) / 2 );
-        rootNode.setOffset( xOffset, yOffset );
     }
 }
